# Kmint

./: .gitignore  README.md  shell.nix
libkmint/: .gitignore  .projectile  CMakeLists.txt  Doxyfile  shell.nix
libkmint/doc/: tutorial.org
libkmint/include/kmint/: main.hpp  play.hpp  primitives.hpp  random.hpp
libkmint/include/kmint/graph/: basic_edge.hpp  basic_graph.hpp  basic_node.hpp
libkmint/include/kmint/graphics/: image.hpp
libkmint/include/kmint/map/: map.hpp
libkmint/include/kmint/math/: angle.hpp  size.hpp  vector2d.hpp
libkmint/include/kmint/play/: actor.hpp  background.hpp  free_roaming_actor.hpp  graph_actor.hpp  graph_bound_actor.hpp  graph_drawable.hpp  stage.hpp  static_actor.hpp
libkmint/include/kmint/ui/: window.hpp
libkmint/src/kmint/: random.cpp
libkmint/src/kmint/map/: map.cpp
libkmint/src/kmint/math/: angle.cpp
libkmint/test/graph/: graph.cpp
libkmint/test/map/: map.cpp
libkmint/test/play/: stage.cpp
pigisland/: CMakeLists.txt
pigisland/include/kmint/pigisland/: boat.hpp  genetic_algorithm.hpp  matrix.hpp  node_algorithm.hpp  pig.hpp  resources.hpp  shark.hpp  shark_state.hpp  shark_state_attacking.hpp  shark_state_scared.hpp  shark_state_tired.hpp  shark_state_wandering.hpp  steering_behaviors.hpp  wall.hpp
pigisland/resources/: Thumbs.db
pigisland/src/kmint/pigisland/: boat.cpp  genetic_algorithm.cpp  main.cpp  matrix.cpp  node_algorithm.cpp  pig.cpp  resources.cpp  shark.cpp  shark_state.cpp  shark_state_attacking.cpp  shark_state_scared.cpp  shark_state_tired.cpp  steering_behaviors.cpp  wall.cpp
(+7 files in other folders)
